--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
-
+*.log
 
 # From https://github.com/github/gitignore/blob/master/Java.gitignore
 *.class
